--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 My day kicks off with coffee and a code review, setting the stage for a productive session of coding in JavaScript and Node.js. Morning hours are dedicated to solving complex issues, like optimizing user interfaces and managing back-end databases. The afternoon is filled with team meetings and collaborative coding sessions, where we brainstorm solutions and refine our projects. Evenings are for winding down with code reviews and exploring new technologies through online courses and tech blogs. Balancing front-end and back-end tasks keeps every day dynamic and challenging, but it’s the thrill of creating impactful software that drives my passion in this ever-evolving field.</p>
             <img src="./Photos/FSD.jpg" alt="Full-Stack Developer Life" height="240" width="320"> <br>
             <video width="320" height="240" controls>
-                <source src="./Videos/FSD.mp4">
+                <source src="FSD.mp4">
             </video>
         </article>
 
@@ -55,7 +55,7 @@
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
             <img src="./Photos/Mumbai.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
-            <video src="./Videos/Mumbai.mp4" controls autoplay loop width="320" height="240"></video>
+            <video src=".Mumbai.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
 
         <!-- Blog 3 -->
@@ -70,7 +70,7 @@
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
             <img src="./Photos/Politics.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
-            <video src="./Videos/Politics.mp4" controls autoplay loop width="320" height="240"></video>
+            <video src="Politics.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
         
         <!-- Blog 4 -->
@@ -82,9 +82,9 @@
             <p><strong>Life in Mumbai:</strong>
                 <br>
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
-            <img src="./Photos/WorldAffairs.jpg" alt="Life in Mumbai" height="240" width="320">
+            <img src="WorldAffairs.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
-            <video src="./Videos/WorldAffairs.mp4" controls autoplay loop width="320" height="240"></video>
+            <video src="WorldAffairs.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
 
     <!-- About Me Section -->
