--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p><strong>Life of a Full-Stack Developer</strong>
                 <br>
                 My day kicks off with coffee and a code review, setting the stage for a productive session of coding in JavaScript and Node.js. Morning hours are dedicated to solving complex issues, like optimizing user interfaces and managing back-end databases. The afternoon is filled with team meetings and collaborative coding sessions, where we brainstorm solutions and refine our projects. Evenings are for winding down with code reviews and exploring new technologies through online courses and tech blogs. Balancing front-end and back-end tasks keeps every day dynamic and challenging, but it’s the thrill of creating impactful software that drives my passion in this ever-evolving field.</p>
-            <img src="./Photos/FSD.jpg" alt="Full-Stack Developer Life" height="240" width="320"> <br>
+            <img src="FSDI.jpg" alt="Full-Stack Developer Life" height="240" width="320"> <br>
             <video width="320" height="240" controls>
                 <source src="FSD.mp4">
             </video>
@@ -53,7 +53,7 @@
             <p><strong>Life in Mumbai:</strong>
                 <br>
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
-            <img src="./Photos/Mumbai.jpg" alt="Life in Mumbai" height="240" width="320">
+            <img src="MumbaiI.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
             <video src=".Mumbai.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
@@ -65,10 +65,10 @@
                 <br>
                 This post analyzes the key political changes and trends in 2024, examining the impact of major elections, policy shifts, and international relations on the global stage.</p>
             <p>
-                <strong>Life in Mumbai:</strong>
+                <strong>Gobal Political Landscap:</strong>
                 <br>
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
-            <img src="./Photos/Politics.jpg" alt="Life in Mumbai" height="240" width="320">
+            <img src="PoliticsI.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
             <video src="Politics.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
@@ -79,10 +79,10 @@
             <p><strong>Summary:</strong> 
                 <br>
                 Explore the major global issues of 2024, including economic crises, climate change, and international conflicts. This post delves into how countries and organizations are responding to these challenges.</p>
-            <p><strong>Life in Mumbai:</strong>
+            <p><strong>Global Challenges:</strong>
                 <br>
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
-            <img src="WorldAffairs.jpg" alt="Life in Mumbai" height="240" width="320">
+            <img src="WorldAffairsI.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
             <video src="WorldAffairs.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
