--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 My day begins with a cup of chai and a view of the city’s ever-bustling streets, preparing me for the hustle and bustle ahead. Mornings are spent navigating through the lively markets and crowded local trains, a true test of patience and resilience. The afternoons are filled with the cacophony of honking horns and the aroma of street food, a testament to Mumbai’s fast-paced lifestyle and rich culinary culture. Evenings bring a calm respite, often spent by the serene Marine Drive, reflecting on the day amidst the backdrop of the city’s iconic skyline. Balancing the chaos and charm of Mumbai keeps life vibrant and unpredictable, but it’s the spirit of the people and the endless opportunities that make this city truly captivating.</p>
             <img src="MumbaiI.jpg" alt="Life in Mumbai" height="240" width="320">
             <br>
-            <video src=".Mumbai.mp4" controls autoplay loop width="320" height="240"></video>
+            <video src="Mumbai.mp4" controls autoplay loop width="320" height="240"></video>
         </article>
 
         <!-- Blog 3 -->
